Header letter spacing fixed

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -93,8 +93,9 @@ a:hover {
 /* xs < 768 */
 @media screen and (max-width: 767px) {
   .header-text h1 {
-    font-size: 35px;
+    font-size: 30px;
     margin-top: -12px;
+    letter-spacing: 7px;
   }
 
   .header-text p {
@@ -108,6 +109,7 @@ a:hover {
     font-size: 65px;
     margin-bottom: 8px;
     margin-top: -13px;
+    letter-spacing: 9px;
   }
 
   .header-text p {
@@ -121,6 +123,7 @@ a:hover {
     font-size: 85px;
     margin-bottom: 20px;
     margin-top: 1px;
+    letter-spacing: 12px;
   }
 
   .header-text p {
@@ -131,7 +134,6 @@ a:hover {
 .header-text h1 {
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
-  letter-spacing: 7px;
   text-transform: uppercase;
 }
 
